crates/dbt-jinja/minijinja/tests/snapshots/test_parser__parser@autoescape.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_parser.rs
description: "{% autoescape false %}foo{% endautoescape %}"
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/parser-inputs/autoescape.txt
---
Ok(
    Template {
        children: [
            AutoEscape {
                enabled: Const {
                    value: False,
                } @ 1:15-1:20,
                body: [
                    EmitRaw {
                        raw: "foo",
                    } @ 1:23-1:26,
                ],
            } @ 1:1-1:45,
        ],
    } @ 1:1-1:45,
)
