crates/dbt-jinja/minijinja/tests/snapshots/test_parser__parser@err_binop_missing_rhs.txt.snap
---
source: minijinja/tests/test_parser.rs
description: "{{ foo / }}"
input_file: minijinja/tests/parser-inputs/err_binop_missing_rhs.txt
---
Err(
    Error {
        kind: SyntaxError,
        detail: "unexpected end of variable block",
        name: "err_binop_missing_rhs.txt",
        line: 1,
    },
)
