crates/dbt-jinja/minijinja/tests/snapshots/test_parser__parser@err_invalid_var_assignment.txt.snap
---
source: minijinja/tests/test_parser.rs
description: "{% for loop in seq %}\n  ...\n{% endfor %}"
input_file: minijinja/tests/parser-inputs/err_invalid_var_assignment.txt
---
Err(
    Error {
        kind: SyntaxError,
        detail: "cannot assign to reserved variable name loop",
        name: "err_invalid_var_assignment.txt",
        line: 1,
    },
)
