crates/dbt-jinja/minijinja/tests/snapshots/test_parser__parser@err_open_block.txt.snap
---
source: minijinja/tests/test_parser.rs
description: "{% block foo bar"
input_file: minijinja/tests/parser-inputs/err_open_block.txt
---
Err(
    Error {
        kind: SyntaxError,
        detail: "unexpected identifier, expected end of block",
        name: "err_open_block.txt",
        line: 1,
    },
)
