crates/dbt-jinja/minijinja/tests/snapshots/test_parser__parser@err_open_variable_block.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_parser.rs
description: "Hello {{ world"
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/parser-inputs/err_open_variable_block.txt
---
Err(
    Error {
        kind: SyntaxError,
        detail: "unexpected end of input, expected end of variable block",
        name: "err_open_variable_block.txt",
    },
)
