crates/dbt-jinja/minijinja/tests/snapshots/test_parser__parser@err_wrong_block_name.txt.snap
---
source: minijinja/tests/test_parser.rs
description: "{% block foo %}\n    here\n{% endblock bar %}"
input_file: minijinja/tests/parser-inputs/err_wrong_block_name.txt
---
Err(
    Error {
        kind: SyntaxError,
        detail: "mismatching name on block. Got `bar`, expected `foo`",
        name: "err_wrong_block_name.txt",
        line: 3,
    },
)
