crates/dbt-jinja/minijinja/tests/snapshots/test_parser__parser@extends.txt.snap
---
source: fs/sa/crates/dbt-jinja/minijinja/tests/test_parser.rs
description: "{% extends \"layout.html\" %}\n{% block title %}new title{% endblock %}\n{% block body %}new body{% endblock %}"
input_file: fs/sa/crates/dbt-jinja/minijinja/tests/parser-inputs/extends.txt
---
Ok(
    Template {
        children: [
            Extends {
                name: Const {
                    value: 'layout.html',
                } @ 1:12-1:25,
            } @ 1:1-1:28,
            EmitRaw {
                raw: "\n",
            } @ 1:28-2:1,
            Block {
                name: "title",
                body: [
                    EmitRaw {
                        raw: "new title",
                    } @ 2:18-2:27,
                ],
            } @ 2:1-2:41,
            EmitRaw {
                raw: "\n",
            } @ 2:41-3:1,
            Block {
                name: "body",
                body: [
                    EmitRaw {
                        raw: "new body",
                    } @ 3:17-3:25,
                ],
            } @ 3:1-3:39,
        ],
    } @ 1:1-3:39,
)
